# finrag-eval

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  eval-regression.yml
apps/api/: main.py
apps/frontend/: app.py
data/metadata/: corpus_manifest_v0.1.csv
data/qa_dataset/: README.md  qa_pairs.jsonl
docs/: corpus_v0.1.md  eval-methodology.md
docs/decisions/: 0001-record-architecture-decisions.md  0002-quality-aware-chunking.md
docs/playbooks/: qa-dataset-construction.md
notebooks/: 01_corpus_eda.py  README.md
scripts/: 01_naive_extraction.py  02_sgml_aware_extraction.py  03_section_tagging.py  04_quality_aware_chunking.py  05_corpus_scale_out.py  06_verify_html_to_text_fix.py  07_build_indexes.py  08_eval_retrieval.py  generate_corpus_manifest.py  spike_edgartools.py  verify_qa_pairs.py
src/finrag_eval/: __init__.py  cli.py
src/finrag_eval/common/: __init__.py  config.py  types.py
src/finrag_eval/eval/: __init__.py  harness.py  judge.py  metrics.py  qa_dataset.py
src/finrag_eval/ingestion/: __init__.py  chunker.py  edgar_client.py
src/finrag_eval/retrieval/: __init__.py  base.py  bm25.py  dense.py  hybrid.py  reranker.py
src/finrag_eval/synthesis/: __init__.py  generator.py  prompts.py
tests/: test_smoke.py
tests/eval/: test_metrics.py
tests/retrieval/: test_bm25.py
